examples/test/testpolicy12976.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12976
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key47: value22
      key34: value22
      key25: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value19
      podSelector:
        matchLabels:
          key37: value47
          key38: value24
